tests/sksl/errors/OverloadedMain.glsl
### Compilation failed:

error: 3: duplicate definition of 'main'
half4 main(float2 xy) { return c; }
^^^^^^^^^^^^^^^^^^^^^
1 error
